# PointsX

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
data/eval/: subjects.csv  subjects.example.csv
notebooks/: 01_exploration.ipynb  02_train_pose_colab.ipynb  03_generate_synthetic_colab.ipynb  04_train_seg_colab.ipynb  05_train_regressor_colab.ipynb
src/pointsx/: calibration.py  circumference.py  cli.py  convert_pose.py  eval.py  keypoints.py  measurements.py  models.py  pipeline.py  pose_coco.py  postprocess.py  schemas.py  silhouette.py  train_pose.py  train_seg.py  verify_labels.py
src/pointsx/regression/: __init__.py  build_dataset.py  dataset.py  features.py  model.py  train.py
src/pointsx/synthetic/: __init__.py  annotator.py  blender_render.py  body_generator.py  clean_smplitex_textures.py  download_smplitex.py  landmarks.py  masks_to_polygons.py  measurements_gt.py  pipeline.py
src/webui/: __init__.py  __main__.py  app.py  envelope.py  inference.py  tts.py  visualize.py
src/webui/docs/: guide-geometry.md  sizing-baseline.md  tailoring-config.md
src/webui/static/: app.js  frame-editor.html  frame-editor.js  guideGeometry.js  index.html  silhouette-test.html  sizeEngine.js  styles.css
src/webui/static/css/: styles.css
src/webui/static/data/: guide-geometry.json  tailoring_config.json
src/webui/static/js/: app.js  frame-editor.js  guide-default.json  guideGeometry.js
src/webui/static/js/__tests__/: sizeEngine.consensus.test.js
src/webui/static/js/capture/: dom.js  overlay.js  poseDebug.js  poseGate.js  session.js  speech.js  state.js  tailoring.js  ui.js
tests/: test_models.py  test_pose_coco.py  test_synthetic_landmarks.py
