[project]
name = "pointsx"
version = "0.1.0"
description = "PyTorch research project with YOLO for point detection"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    # NumPy 2.x breaks many PyTorch wheels (torch C extension expects 1.x ABI).
    "numpy>=1.26.0,<2",
    "opencv-python>=4.9.0,<4.12",
    "matplotlib>=3.8.0",
    "pillow>=10.2.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "smplx>=0.1.28",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # smpl-anthropometry is not on PyPI — install manually:
    # pip install git+https://github.com/DavidBoja/SMPL-Anthropometry.git
    "rich>=15.0.0",
    "python-multipart>=0.0.26",
]

[project.scripts]
pointsx = "pointsx.cli:main"
pointsx-web = "webui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pointsx", "src/webui"]

[tool.ruff]
line-length = 120
target-version = "py312"
